# katso

./: .gitignore  README.md  katso.py  pyproject.toml  test.py  tox.ini
testit/: _testi.py  testaa_context.py  testaa_getattr.py  testaa_import.py  testaa_locals.py  testaa_setattr.py  testaa_tyypitys.py
