[build-system]
requires = ["git-versiointi>=1.7c4", "setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {name = "Antti Hautaniemi", email = "antti.hautaniemi@me.com"},
]
dynamic = ["version"]
license = {text = "MIT"}
name = "katso"
readme = "README.md"
requires-python = ">= 3.11"

[project.urls]
Repository = "https://github.com/an7oine/katso.git"

[tool.setuptools]
py-modules = ["katso"]
